shared/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - blog.chriszhu.me
    - love-letter.chriszhu.me
    - whiteboarder.chriszhu.me
    secretName: example-tls
  rules:
  - host: blog.chriszhu.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: blog
            port:
              number: 80
  - host: love-letter.chriszhu.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: love-letter-service
            port:
              number: 80
  - host: whiteboarder.chriszhu.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: whiteboarder-service
            port:
              number: 80
